2009-01-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs: add Clone()

2009-01-05  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/Shapefile.cs:  make DbfFile accessible

	* Projection/ProjFourWrapper.cs: add ProjFourException

2008-12-30  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: don't write empty options

2008-12-30  Scott Ellington  <scott.ellington@gmail.com>

	* Layer.cs: make method public

2008-12-19  Full Name  <Email Address>

	* Cumberland.csproj: reset lang version

2008-12-19  Full Name  <Email Address>

	* Data/IFeatureSource.cs:
	* Data/AbstractDatabaseFeatureSource.cs: add AbstractDataSource, add
	IFeatureSource.Extents

	* Data/KeyholeMarkupLanguage.cs: remove kml so I don't have to deal with
	it

	* Cumberland.csproj: set c# to ISO 2

2008-12-15  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add FillStyle.Texture and
	Style.FillTexturePath

2008-12-13  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add
	Style.CalculateLabelAngleForPolyLine and
	Style.DrawPointSymbolOnPolyLine

2008-12-13  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/WellKnownText/SimpleFeatureAccess.cs: fix bug #1

2008-12-11  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs: clip extents to world extents when calculating
	tile rectangle,

	* Rectangle.cs: add Rectangle.Intersect

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: add TextRenderingHint 

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Projection/ProjFourWrapper.cs: fix p/invoke

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs:
	* Projection/ProjFourWrapper.cs: readd obsolete members

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>
