@@ -1,3 +1,7 @@
+2009-01-12  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Data/Shapefile/DBaseIIIFile.cs: support float column in dBase IV
+
 2009-01-05  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Style.cs: add Clone()
